[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lama-inpainting-tmi"
version = "1.0.0"
description = "LaMa: Resolution-robust Large Mask Inpainting with Fourier Convolutions"
readme = "README.md"
authors = [
    {name = "Roman Suvorov"},
    {name = "Elizaveta Logacheva"},
    {name = "Anton Mashikhin"},
    {name = "Anastasia Remizova"},
    {name = "Arsenii Ashukha"},
    {name = "Aleksei Silvestrov"},
    {name = "Naejin Kong"},
    {name = "Harshith Goka"},
    {name = "Kiwoong Park"},
    {name = "Victor Lempitsky"}
]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9"
]
requires-python = ">=3.7"
dependencies = [
    "pyyaml",
    "tqdm",
    "numpy",
    "easydict==1.9.0",
    "scikit-image==0.17.2",
    "scikit-learn==0.24.2",
    "opencv-python",
    "tensorflow",
    "joblib",
    "matplotlib",
    "pandas",
    "albumentations==0.5.2",
    "hydra-core==1.1.0",
    "pytorch-lightning==1.2.9",
    "tabulate",
    "kornia==0.5.0",
    "webdataset",
    "packaging",
]

[project.urls]
"Homepage" = "https://github.com/advimman/lama"
"Bug Tracker" = "https://github.com/advimman/lama/issues"

[project.scripts]
lama-predict = "bin.predict:main"
lama-train = "bin.train:main" 